--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=2513a063
 DB_TEST_NAME=forumy_test
-WISE_KEY=
+WISE_KEY=863cfe0d-047e-4e8c-b57b-240e7f6ed0d7
